--- a/index.html
+++ b/index.html
@@ -29,7 +29,56 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="menu_container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"
+              ><img src="./imagenes/logo-fix.png" alt=""
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./pages/acerca de nosotros.html"
+                    >Acerca de</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./pages/catalogo.html"
+                    >Catalogo</a
+                  >
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Buscar"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Buscar
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+
+        <!-- <nav class="menu_container">
           <div class="logo">
             <img src="./imagenes/logo-fix.png" alt="" />
           </div>
@@ -45,7 +94,7 @@
               <li><a href="./pages/catalogo.html"> Catalogo </a></li>
             </ul>
           </div>
-        </nav>
+        </nav> -->
       </div>
 
       <div class="grid_item2">
