--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Ruta del Hardware</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,9 +27,64 @@
   </head>
 
   <body>
-    <div class="parent">
-      <div class="div1">
-        <nav class="menu_container">
+    <div class="grid_container">
+      <div class="grid_item1">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"
+              ><img src="../imagenes/logo-fix.png" alt=""
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="../index.html"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./acerca de nosotros.html"
+                    >Acerca de</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="#"
+                    >Catalogo</a
+                  >
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Buscar"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Buscar
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+
+        <!-- <nav class="menu_container">
           <div class="logo">
             <img src="../imagenes/logo-fix.png" alt="" />
           </div>
@@ -36,15 +97,15 @@
               <li><a href="#"> Catalogo </a></li>
             </ul>
           </div>
-        </nav>
+        </nav> -->
       </div>
 
-      <div class="div2"></div>
-      <main class="main_catalogo">
-        <div class="relleno_catalogo"></div>
-        <section class="caja1">
+      <div class="grid_item2">
+        <main class="main_catalogo">
+          <div class="relleno_catalogo"></div>
+          <section class="caja1">
             <article class="producto">
-              <a class="item" href="./pages/producto_1.html">
+              <a class="item" href="./producto_1.html">
                 <img src="../imagenes/500_500-ic3_x6_1.PNG" alt="" />
                 <p>GABINETE ATX IC3 S17-5 RED 6 COOLERS GAMER</p>
                 <span> 6̶4̶5̶0̶0̶$ - 50000$</span>
@@ -56,37 +117,46 @@
               </div>
             </article>
           </section>
-      </main>
+        </main>
+      </div>
 
-      <div class="div3"></div>
-      <footer>
-        <div class="footer_container">
-          <div class="contacto">
-            <h2><a href="./contacto.html"> Contacto</a></h2>
-          </div>
+      <div class="grid_item3">
+        <footer>
+          <div class="footer_container">
+            <div class="contacto">
+              <h2><a href="./contacto.html"> Contacto</a></h2>
+            </div>
 
-          <div class="box__footer">
-            <h2>Colaboradores</h2>
-            <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
-            <a href="https://www.intel.la/content/www/xl/es/homepage.html">Intel</a>
-            <a href="https://www.amd.com/es">AMD</a>
-            <a href="https://www.gigabyte.com/">GIGABYTE</a>
-          </div>
+            <div class="box__footer">
+              <h2>Colaboradores</h2>
+              <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
+              <a href="https://www.intel.la/content/www/xl/es/homepage.html"
+                >Intel</a
+              >
+              <a href="https://www.amd.com/es">AMD</a>
+              <a href="https://www.gigabyte.com/">GIGABYTE</a>
+            </div>
 
-          <div class="box__footer">
-            <h2>Redes Sociales</h2>
-            <a href="https://www.facebook.com/">
-              <img src="../imagenes/facebook.png" alt="" />
-            </a>
-            <a href="https://www.instagram.com/">
-              <img src="../imagenes/instagram.png" alt="" />
-            </a>
+            <div class="box__footer">
+              <h2>Redes Sociales</h2>
+              <a href="https://www.facebook.com/">
+                <img src="../imagenes/facebook.png" alt="" />
+              </a>
+              <a href="https://www.instagram.com/">
+                <img src="../imagenes/instagram.png" alt="" />
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="copyright">
-          <span>©LA RUTA DEL HARDWARE 2022 Derechos Reservados</span>
-        </div>
-      </footer>
+          <div class="copyright">
+            <span>©LA RUTA DEL HARDWARE 2022 Derechos Reservados</span>
+          </div>
+        </footer>
+      </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
