Se agrego un css aux, completo el catalogo y ajusto detalles

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -56,15 +56,15 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./acerca de nosotros.html"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="./acerca de nosotros.html"
                     >Acerca de</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="#"
+                  <a class="nav-link active" aria-current="page" href="#"
                     >Catalogo</a
                   >
                 </li>
@@ -103,16 +103,39 @@
       <div class="grid_item2">
         <main class="main_catalogo">
           <div class="relleno_catalogo"></div>
-          <section class="caja1">
-            <article class="producto">
-              <a class="item" href="./producto_1.html">
+          <section class="caja1_catalogo">
+            <article class="producto_catalogo">
+              <a class="item_catalogo" href="./producto_1.html">
                 <img src="../imagenes/500_500-ic3_x6_1.PNG" alt="" />
                 <p>GABINETE ATX IC3 S17-5 RED 6 COOLERS GAMER</p>
                 <span> 6̶4̶5̶0̶0̶$ - 50000$</span>
               </a>
-              <div class="item">
+              <div class="item_catalogo">
                 <img src="../imagenes/silla.png" alt="" />
                 <p>SILLA GAMER CORSAIR T1 RACE NEGRO/ROJO</p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/laptod.jpg" alt="" />
+                <p>
+                  Notebook Gamer AORUS KD 15.6" Core I7 11800H 16GB (2x8GB)
+                  512GB SSD NVMe RTX 3060 240Hz W11
+                </p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/mouse.jpg" alt="" />
+                <p>Mouse Glorious Model D Minus - Matte Black T</p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/monitor.jpg" alt="" />
+                <p>Monitor Samsung 24'' Curvo F390</p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/auriculares.jpg" alt="" />
+                <p>Auriculares Logitech G433 Gaming Black 7.1 PC | PS4 | Switch | XBOX</p>
                 <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
               </div>
             </article>
