--- a/pages/producto_1.html
+++ b/pages/producto_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>La Ruta del Hardware</title>
+    <title>GABINETE ATX IC3 S17-5 RED 6 COOLERS GAMER</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
