--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000;" >
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
               ><img src="./imagenes/logo-fix.png" alt=""
@@ -70,7 +70,7 @@
                   placeholder="Buscar"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-warning" type="submit">
                   Buscar
                 </button>
               </form>
@@ -78,23 +78,7 @@
           </div>
         </nav>
 
-        <!-- <nav class="menu_container">
-          <div class="logo">
-            <img src="./imagenes/logo-fix.png" alt="" />
-          </div>
-
-          <div class="menu">
-            <ul>
-              <li><a href="#"> Inicio </a></li>
-              <li>
-                <a href="./pages/acerca de nosotros.html"
-                  >Acerca de nosotros
-                </a>
-              </li>
-              <li><a href="./pages/catalogo.html"> Catalogo </a></li>
-            </ul>
-          </div>
-        </nav> -->
+    
       </div>
 
       <div class="grid_item2">
@@ -166,21 +150,23 @@
             </div>
             <div class="box__footer">
               <h2>Colaboradores</h2>
-              <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
-              <a href="https://www.intel.la/content/www/xl/es/homepage.html"
+              <a href="https://www.nvidia.com/es-la/" target="blank" >NVIDIA</a>
+              <a href="https://www.intel.la/content/www/xl/es/homepage.html" target="blank"
                 >Intel</a
               >
-              <a href="https://www.amd.com/es">AMD</a>
-              <a href="https://www.gigabyte.com/">GIGABYTE</a>
+              <a href="https://www.amd.com/es" target="blank">AMD</a>
+              <a href="https://www.gigabyte.com/" target="blank">GIGABYTE</a>
             </div>
             <div class="box__footer">
               <h2>Redes Sociales</h2>
-              <a href="https://www.facebook.com/">
+              <div class="img-footer">
+                <a class="" href="https://www.facebook.com/" target="blank">
                 <img src="./imagenes/facebook.png" alt="" />
               </a>
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="blank">
                 <img src="./imagenes/instagram.png" alt="" />
               </a>
+              </div>
             </div>
           </div>
           <div class="copyright">
