--- a/pages/acerca de nosotros.html
+++ b/pages/acerca de nosotros.html
@@ -29,9 +29,12 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="navbar navbar-expand-lg navbar-dark"
+          style="background-color: #000000"
+        >
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="../index.html"
               ><img src="../imagenes/logo-fix.png" alt=""
             /></a>
             <button
@@ -56,10 +59,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="#"
+                  <a class="nav-link active" aria-current="page" href="#"
                     >Acerca de</a
                   >
                 </li>
@@ -79,7 +79,7 @@
                   placeholder="Buscar"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-warning" type="submit">
                   Buscar
                 </button>
               </form>
@@ -87,18 +87,7 @@
           </div>
         </nav>
 
-        <!-- <nav class="menu_container">
-          <div class="logo">
-            <img src="../imagenes/logo-fix.png" alt="" />
-          </div>
-          <div class="menu">
-            <ul>
-              <li><a href="../index.html"> Inicio </a></li>
-              <li><a href="#"> Acerca de nosotros </a></li>
-              <li><a href="./catalogo.html"> Catalogo </a></li>
-            </ul>
-          </div>
-        </nav> -->
+  
       </div>
 
       <div class="grid_item2">
@@ -106,52 +95,31 @@
           <div class="relleno_acerca"></div>
 
           <div class="contenedor_acerca">
-            <div class="iframe_columna">
-              <iframe
-                src="https://www.youtube.com/embed/qydOszbfbM4?autoplay=1&mute=1"
-                frameborder="0"
-              ></iframe>
+
+            <div class="banner_columna">
+              <img
+                src="../imagenes/halo-5_-guardians-hd-wallpapers-33211-6208851_Easy-Resize.com_.jpg"
+                alt=""
+              />
             </div>
 
             <div class="texto">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Similique, exercitationem. Eveniet, hic ea voluptatem quasi vel
-                officiis non aut ullam eum debitis culpa veritatis consequatur
-                animi iure temporibus modi necessitatibus. Consectetur quos
-                nostrum eligendi officiis praesentium doloribus architecto sit
-                voluptate? Ipsa reprehenderit enim similique sint temporibus
-                ratione nihil iure fugiat magnam velit debitis non
-
+                Somos una empresa formada por apasionados de las computadoras y el gaming.
+                Nuestro objetico es brindarte la mejor calidad de productos y servicios que este en nuestra disposición. 
+                Desde hardware y software hasta mantenimiento de tu Pc.
                 <br />
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
-                earum optio provident alias perferendis assumenda quo fugit
-                nihil explicabo totam voluptatibus, saepe culpa eaque. Soluta
-                aut quidem vitae quaerat numquam!Lorem Lorem ipsum dolor sit,
-                amet consectetur adipisicing elit. Dicta, minima voluptas fugit
-                pariatur voluptate amet quam placeat unde dignissimos in vel
-                dolorem quod quas exercitationem hic incidunt illo facilis at!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti quibusdam in aperiam reprehenderit quasi, architecto
-                sit, officia atque quidem quis minus illum ab fuga sequi ad ut,
-                sed iusto adipisci!
-                <br />
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-                nihil doloribus ducimus eos, repellat alias quis tempora
-                architecto sapiente dignissimos pariatur veniam excepturi
-                provident! Reprehenderit nemo recusandae ratione a quibusdam.
-                Voluptatibus vero consequatur autem, quo recusandae ullam non
-                quibusdam nihil modi aperiam illum ipsam ipsa laudantium
-                dignissimos. Voluptate neque error, fugit adipisci nostrum ipsum
-                quos eos sint voluptatibus, quis ipsa!
+                Esperamos que disfrutes de nuestros productos y encuentres todo lo que necesites
               </p>
+              
             </div>
 
-            <div class="iframe_columna">
-              <iframe
-                src="https://www.youtube.com/embed/RNQvBeh1G2o?;autoplay=1&mute=1"
-                frameborder="0"
-              ></iframe>
+            <div class="banner_columna">
+              <img
+                src="../imagenes/ce73c5f56af65560fdc24696ba6ec26c.jpg"
+                alt=""
+              />
+            </div>
             </div>
           </div>
         </main>
@@ -166,22 +134,24 @@
 
             <div class="box__footer">
               <h2>Colaboradores</h2>
-              <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
-              <a href="https://www.intel.la/content/www/xl/es/homepage.html"
+              <a href="https://www.nvidia.com/es-la/" target="blank">NVIDIA</a>
+              <a href="https://www.intel.la/content/www/xl/es/homepage.html" target="blank"
                 >Intel</a
               >
-              <a href="https://www.amd.com/es">AMD</a>
-              <a href="https://www.gigabyte.com/">GIGABYTE</a>
+              <a href="https://www.amd.com/es" target="blank">AMD</a>
+              <a href="https://www.gigabyte.com/" target="blank">GIGABYTE</a>
             </div>
 
             <div class="box__footer">
               <h2>Redes Sociales</h2>
-              <a href="https://www.facebook.com/">
-                <img src="../imagenes/facebook.png" alt="" />
-              </a>
-              <a href="https://www.instagram.com/">
-                <img src="../imagenes/instagram.png" alt="" />
-              </a>
+              <div class="img-footer">
+                <a class="" href="https://www.facebook.com/" target="blank">
+                  <img src="../imagenes/facebook.png" alt="" />
+                </a>
+                <a href="https://www.instagram.com/" target="blank">
+                  <img src="../imagenes/instagram.png" alt="" />
+                </a>
+              </div>
             </div>
           </div>
           <div class="copyright">
