--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,9 +29,12 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="navbar navbar-expand-lg navbar-dark"
+          style="background-color: #000000"
+        >
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="../index.html"
               ><img src="../imagenes/logo-fix.png" alt=""
             /></a>
             <button
@@ -48,7 +51,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="../index.html"
                     >Inicio</a
                   >
                 </li>
@@ -76,28 +82,13 @@
                   placeholder="Buscar"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-warning" type="submit">
                   Buscar
                 </button>
               </form>
             </div>
           </div>
         </nav>
-
-        <!-- <nav class="menu_container">
-          <div class="logo">
-            <img src="../imagenes/logo-fix.png" alt="" />
-          </div>
-          <div class="menu">
-            <ul>
-              <li><a href="../index.html"> Inicio </a></li>
-              <li>
-                <a href="./acerca de nosotros.html"> Acerca de nosotros </a>
-              </li>
-              <li><a href="./catalogo.html"> Catalogo </a></li>
-            </ul>
-          </div>
-        </nav> -->
       </div>
 
       <div class="grid_item2">
@@ -137,9 +128,9 @@
                 required
               ></textarea>
               <div class="boton_robot">
-                <input type="submit" value="Enviar" />
-                <label for="no_soy_robot">No soy robot</label>
-                <input type="checkbox" name="no_soy_robot" id="" />
+                <input id="enviar" type="submit" value="Enviar" />
+                <label id="robot" for="no_soy_robot">No soy robot</label>
+                <input id="check" type="checkbox" name="no_soy_robot" id="" />
               </div>
             </form>
           </section>
@@ -154,21 +145,23 @@
             </div>
             <div class="box__footer">
               <h2>Colaboradores</h2>
-              <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
-              <a href="https://www.intel.la/content/www/xl/es/homepage.html"
+              <a href="https://www.nvidia.com/es-la/" target="blank">NVIDIA</a>
+              <a href="https://www.intel.la/content/www/xl/es/homepage.html" target="blank"
                 >Intel</a
               >
-              <a href="https://www.amd.com/es">AMD</a>
-              <a href="https://www.gigabyte.com/">GIGABYTE</a>
+              <a href="https://www.amd.com/es" target="blank">AMD</a>
+              <a href="https://www.gigabyte.com/" target="blank">GIGABYTE</a>
             </div>
             <div class="box__footer">
               <h2>Redes Sociales</h2>
-              <a href="https://www.facebook.com/">
-                <img src="../imagenes/facebook.png" alt="" />
-              </a>
-              <a href="https://www.instagram.com/">
-                <img src="../imagenes/instagram.png" alt="" />
-              </a>
+              <div class="img-footer">
+                <a class="" href="https://www.facebook.com/" target="blank">
+                  <img src="../imagenes/facebook.png" alt="" />
+                </a>
+                <a href="https://www.instagram.com/" target="blank">
+                  <img src="../imagenes/instagram.png" alt="" />
+                </a>
+              </div>
             </div>
           </div>
           <div class="copyright">
