--- a/pages/producto_1.html
+++ b/pages/producto_1.html
@@ -29,9 +29,12 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="navbar navbar-expand-lg navbar-dark"
+          style="background-color: #000000"
+        >
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="../index.html"
               ><img src="../imagenes/logo-fix.png" alt=""
             /></a>
             <button
@@ -79,52 +82,53 @@
                   placeholder="Buscar"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-warning" type="submit">
                   Buscar
                 </button>
               </form>
             </div>
           </div>
         </nav>
-
-        <!-- <nav class="menu_container">
-          <div class="logo">
-            <img src="../imagenes/logo-fix.png" alt="" />
-          </div>
-          <div class="menu">
-            <ul>
-              <li><a href="../index.html"> Inicio </a></li>
-              <li>
-                <a href="./acerca de nosotros.html"> Acerca de nosotros </a>
-              </li>
-              <li><a href="./catalogo.html"> Catalogo </a></li>
-            </ul>
-          </div>
-        </nav> -->
       </div>
 
       <div class="grid_item2">
         <main class="main_producto">
           <div class="relleno_producto"></div>
 
-          <section class="producto_container">
-            <div class="foto_producto">
-              <img src="../imagenes/500_500-ic3_x6_1.PNG" alt="" />
+          <div class="clasita">
+            <div class="banner_columna">
+              <img
+                src="../imagenes/sadadasdasd.jpg"
+                alt=""
+              />
             </div>
-            <div class="titular">
-              <h1>GABINETE ATX IC3 S17-5 RED 6 COOLERS GAMER</h1>
-              <p>6̶4̶5̶0̶0̶$ - 50000$</p>
-              <p>
-                Garantía - 12 meses
-                <br />
-                Stock disponible
-              </p>
-              <a href="https://www.mercadolibre.com.ar/" target="blank">
-                COMPRAR</a
-              >
+
+            <section class="producto_container">
+              <div class="foto_producto">
+                <img src="../imagenes/500_500-ic3_x6_1.PNG" alt="" />
+              </div>
+              <div class="titular">
+                <h1>GABINETE ATX IC3 S17-5 RED 6 COOLERS GAMER</h1>
+                <p>6̶4̶5̶0̶0̶$ - 50000$</p>
+                <p>
+                  Garantía - 12 meses
+                  <br />
+                  Stock disponible
+                </p>
+                <a href="https://www.mercadolibre.com.ar/" target="blank">
+                  COMPRAR</a
+                >
+              </div>
+              <section class="descripcion">Descripcion</section>
+            </section>
+
+            <div class="banner_columna">
+              <img
+                src="../imagenes/MWII-001-IW-INTRO-TOUT.jpg"
+                alt=""
+              />
             </div>
-            <section class="descripcion">Descripcion</section>
-          </section>
+          </div>
         </main>
       </div>
 
@@ -137,22 +141,24 @@
 
             <div class="box__footer">
               <h2>Colaboradores</h2>
-              <a href="https://www.nvidia.com/es-la/">NVIDIA</a>
-              <a href="https://www.intel.la/content/www/xl/es/homepage.html"
+              <a href="https://www.nvidia.com/es-la/" target="blank">NVIDIA</a>
+              <a href="https://www.intel.la/content/www/xl/es/homepage.html" target="blank"
                 >Intel</a
               >
-              <a href="https://www.amd.com/es">AMD</a>
-              <a href="https://www.gigabyte.com/">GIGABYTE</a>
+              <a href="https://www.amd.com/es" target="blank">AMD</a>
+              <a href="https://www.gigabyte.com/" target="blank">GIGABYTE</a>
             </div>
 
             <div class="box__footer">
               <h2>Redes Sociales</h2>
-              <a href="https://www.facebook.com/">
-                <img src="../imagenes/facebook.png" alt="" />
-              </a>
-              <a href="https://www.instagram.com/">
-                <img src="../imagenes/instagram.png" alt="" />
-              </a>
+              <div class="img-footer">
+                <a class="" href="https://www.facebook.com/" target="blank">
+                  <img src="../imagenes/facebook.png" alt="" />
+                </a>
+                <a href="https://www.instagram.com/" target="blank">
+                  <img src="../imagenes/instagram.png" alt="" />
+                </a>
+              </div>
             </div>
           </div>
           <div class="copyright">
