Cambios finales colocados

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -29,7 +29,10 @@
   <body>
     <div class="grid_container">
       <div class="grid_item1">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000;" >
+        <nav
+          class="navbar navbar-expand-lg navbar-dark"
+          style="background-color: #000000"
+        >
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"
               ><img src="../imagenes/logo-fix.png" alt=""
@@ -83,8 +86,6 @@
             </div>
           </div>
         </nav>
-
-      
       </div>
 
       <div class="grid_item2">
@@ -122,7 +123,41 @@
               </div>
               <div class="item_catalogo">
                 <img src="../imagenes/auriculares.jpg" alt="" />
-                <p>Auriculares Logitech G433 Gaming Black 7.1 PC | PS4 | Switch | XBOX</p>
+                <p>
+                  Auriculares Logitech G433 Gaming Black 7.1 PC | PS4 | Switch |
+                  XBOX
+                </p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/i7.jpg" alt="" />
+                <p>
+                  Procesador Intel Core i7-10700 BX8070110700 de 8 núcleos y
+                  4.8GHz de frecuencia con gráfica integrada
+                </p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img
+                  src="../imagenes/D_NQ_NP_809795-MLA49615141015_042022-O.jpg"
+                  alt=""
+                />
+                <p>Asus Rog Stix B450 F Gaming Am4 Pc Mineria Gamer 6 Pcie</p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/ram.jpg" alt="" />
+                <p>
+                  Memoria RAM Vengeance RGB Pro gamer color negro 16GB 2 Corsair
+                  CMW16GX4M2D3600C18
+                </p>
+                <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
+              </div>
+              <div class="item_catalogo">
+                <img src="../imagenes/sata.jpg" alt="" />
+                <p>
+                  Disco Rigido 1tb Sata 3 Wd 64mb
+                </p>
                 <span> 4̶4̶5̶0̶0̶$ - 30000$</span>
               </div>
             </article>
@@ -140,7 +175,9 @@
             <div class="box__footer">
               <h2>Colaboradores</h2>
               <a href="https://www.nvidia.com/es-la/" target="blank">NVIDIA</a>
-              <a href="https://www.intel.la/content/www/xl/es/homepage.html" target="blank"
+              <a
+                href="https://www.intel.la/content/www/xl/es/homepage.html"
+                target="blank"
                 >Intel</a
               >
               <a href="https://www.amd.com/es" target="blank">AMD</a>
